Tooltip positioning fix on overflow screen

--- a/WebUI/SPA/Components/Pages/AnalysisPage/FactorsView/VersionTooltip/version-tooltip.component.css
+++ b/WebUI/SPA/Components/Pages/AnalysisPage/FactorsView/VersionTooltip/version-tooltip.component.css
@@ -19,8 +19,8 @@
         border-right: solid 15px transparent;
         border-top: none;
         position: relative;
-        left: calc(50% - 15px);
-        top: -18px;
+        /*left: calc(50% - 15px);
+        top: -18px;*/
     }
 
 
